metodos de tipos de activos implementados
